SubBt/force-app/main/default/objects/Vendor_Review_Lines__c/Vendor_Review_Lines__c.object-meta.xml
<CustomObject>
    <label>Vendor Review Line</label>
    <nameField>
        <label>Question</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor Review Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>