SubBt/force-app/main/default/objects/Vendor_Review_Lines__c/fields/Contract_Review__c.field-meta.xml
<CustomField>
    <fullName>Contract_Review__c</fullName>
    <label>Vendor Review</label>
    <referenceTo>Vendor_Review__c</referenceTo>
    <relationshipLabel>Vendor Review Lines</relationshipLabel>
    <relationshipName>Contract_Review_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>