SubBt/force-app/main/default/objects/Vendor_Review_Lines__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <inlineHelpText>1 is the worst, 10 is the best.</inlineHelpText>
    <label>Rating</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>