SubBt/force-app/main/default/objects/Vendor_Review_Lines__c/fields/Weighting__c.field-meta.xml
<CustomField>
    <fullName>Weighting__c</fullName>
    <label>Weighting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>